--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -330,7 +330,7 @@
         position: fixed;
         top: 51px;
         right: 6%;
-        width: 30px;
+        width: 25px;
         height: 30px;
         cursor: pointer;
         transition: 0.4s;
@@ -338,19 +338,19 @@
     }
     .burger-line {
         width: 100%;
-        height: 4px;
+        height: 3px;
         background: #127F94;
         border-radius: 5px;
         transition: 0.4s;
     }
     .burger-line:nth-child(2){
-        margin: 4px 0;
+        margin: 3px 0;
     }
     .burger-menu.active .burger-line:first-child {
-        transform: translate(-2px, 12px) rotate(45deg);
+        transform: translate(-2px, 9px) rotate( 45deg);
     }
     .burger-menu.active .burger-line:last-child {
-        transform: translate(-2px, -4px) rotate(-45deg);
+        transform: translate(-2px, -3px) rotate(-45deg);
     }
     .burger-menu.active .burger-line:nth-child(2){
         transform: translateX(-35px);
@@ -561,4 +561,396 @@
        }
 
        /* Service */
+}
+
+
+@media (max-width: 768px){
+    .font-30{
+        font-size: 18px;
+    }
+    .font-24{
+        font-size: 16px;
+    }
+    .font-20{
+        font-size: 14px;
+    }
+    .font-22{
+        font-size: 14px;
+    }
+    .line-34{
+        line-height: 22px;
+    }
+    header{
+        height: 80px;
+    }
+    .header{
+        height: 80px;
+    }
+    .header .logo img{
+        width: 60%;
+    }
+    .burger-lines{
+        top: 34px;
+    }
+    .main-banner{
+        height: 151px;
+    }
+    .main-banner .banner-content{
+        display: none;
+    }
+    .home-about .title h2 {
+        line-height: 21px;
+    }
+    .home-about .title, .home-about-text .title{
+        margin-bottom: 20px;
+    }
+    .home-about .info-row .label span{
+        line-height: 19px;
+    }
+    .label{
+        margin-bottom: 20px;
+    }
+    .home-about .info-row {
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    .section-p{
+        padding: 40px 0;
+    }
+    .home-about-text .text{
+        max-height: 70px;
+    }
+    .home-about-text .bricks{
+        flex-direction: initial;
+        justify-content: flex-start;
+    }
+    .home-about-text .bricks .brick{
+        width: 150px;
+        height: 100px;
+        margin-bottom: 0;
+    }
+    .home-about-text .bricks .brick:first-child{
+        margin-right: 15px;
+    }
+    .home-about-text .bricks .brick strong{
+        font-size: 34px;
+        line-height: 40px;
+    }
+    .home-about-text .bricks .brick span{
+        font-size: 11px;
+    }
+    .home-about-text .text{
+        margin-bottom: 25px;
+    }
+    .home-about-text{
+        position: relative;
+    }
+    .link2{
+        position: absolute;
+        bottom: 48px;
+    }
+    .about-paddind{
+        padding-bottom: 94px;
+    }
+    .project-menu{
+        display: none;
+    }
+    .projects .project-card a{
+        padding: 0;
+    }
+    .projects .project-card a .image{
+        height: 270px;
+    }
+    .projects .project-card a .image .cover {
+        position: absolute;
+        z-index: 2;
+        bottom: -45px;
+        left: -12px;
+        height: initial;
+        transform: rotate(3deg);
+    }
+    .projects .project-card a .info {
+        bottom: 13px;
+    }
+    .projects .project-card a .info h5{
+        margin-bottom: 7px;
+        background: #fff;
+    }
+    .projects .project-card {
+        padding-top: 40px;
+    }
+    .projects .col-xxl-6:nth-child(2n) a {
+        top: 55px;
+    }
+    .projects .row {
+        padding-bottom: 80px;
+    }
+    .add-flex{
+        justify-content: space-between;
+    }
+    .clients .client-card {
+        height: 68px;
+        margin-top: 35px;
+    }
+    .clients .client-card img {
+        width: 76%;
+    }
+    .footer .footer-menu .footer-logo{
+        display: none;
+    }
+    .footer .footer-information span{
+        display: inline-block;
+        font-size: 26px;
+        line-height: 34px;
+        margin-bottom: 40px;
+    }
+    .footer .footer-information > a{
+        width: initial;
+        height: initial;
+        display: inline-block;
+        padding: 9px 16px;
+        float: right;
+    }
+    .footer .footer-information .mail-number{
+        margin-top: 0;
+        width: fit-content;
+    }
+    .footer .footer-information .mail-number a{
+        line-height: 11px;
+        margin-bottom: 9px;
+    }
+    .footer .footer-menu .footer-nav .row a{
+        line-height: 15px;
+        margin-bottom: 10px;
+    }
+    .marg-t {
+        margin-top: -55px;
+        margin-left: 222px;
+    }
+    .bottom-footer {
+        height: 46px;
+    }
+    .bottom-footer .bottom-footer-info span{
+        line-height: 5px;
+    }
+    .bottom-footer .bottom-footer-info span{
+        font-size: 11px;
+    }
+    .bottom-footer .bottom-footer-info a{
+        font-size: 11px;
+    }
+    .faq .accordion .accordion-item .accordion-header button{
+        padding: 0;
+    }
+    .tabcontent .logo{
+        max-width: 140px;
+        height: 47px;
+    }
+    .tabcontent {
+        padding: 30px 15px;
+    }
+    .tab button h4{
+        margin-bottom: 10px;
+    }
+    .tab button{
+        font-size: 14px;
+        padding-left: 15px;
+    }
+    .testimonial-section .testimonial .title{
+        margin-bottom: 30px;
+    }
+    /* 
+        blog
+    */
+    .subscribe-section .subscribe {
+        padding: 75px 0 57px 0;
+    }
+    .subscribe-section .subscribe .title h3{
+        font-size: 20px;
+        line-height: 26px;
+    }
+    .subscribe-section .subscribe .subscribe-input {
+        width: 382px;
+        position: relative;
+        height: 48px;
+    }
+    .subscribe-section .subscribe .subscribe-input input{
+        font-size: 14px;
+        padding-left: 20px;
+    }
+    .subscribe-section .subscribe .subscribe-input button{
+        right: 25px;
+        font-size: 14px;
+    }
+    .subscribe-section .subscribe .title{
+        margin-bottom: 25px;
+    }
+    .subscribe-section .subscribe .text{
+        display: none;
+    }
+}
+@media (max-width: 575px){
+    .font-30{
+        font-size: 16px;
+    }
+    .font-24{
+        font-size: 14px;
+    }
+    .font-20{
+        font-size: 12px;
+    }
+    .font-22{
+        font-size: 12px;
+    }
+    .font-18{
+        font-size: 10px;
+    }
+    .line-34{
+        line-height: 18px;
+    }
+    .header .logo img{
+        width: 82%;
+    }
+    .home-about-text .bricks .brick{
+        width: 117px;
+        height: 87px;
+        margin-bottom: 0;
+    }
+    .projects .project-card a .image{
+        height: 202px;
+    }
+    .projects .project-card a .image .cover {
+        position: absolute;
+        z-index: 2;
+        bottom: -43px;
+        left: -12px;
+        height: initial;
+        transform: rotate(2deg);
+    }
+    .projects .project-card a .info {
+        bottom: 13px;
+    }
+    .projects .project-card a .info h5{
+        margin-bottom: 7px;
+        background: #fff;
+    }
+    .projects .project-card {
+        padding-top: 40px;
+    }
+    .projects .col-xxl-6:nth-child(2n) a {
+        top: 45px;
+    }
+    .projects .row {
+        padding-bottom: 50px;
+    }
+    .marg-t{
+        margin-top: -55px;
+        margin-left: 38%;
+    }
+    .clients .client-card img {
+        width: 86%;
+    }
+    .bottom-footer {
+        height: 36px;
+    }
+    .bottom-footer .bottom-footer-info span{
+        font-size: 9px;
+    }
+    .bottom-footer .bottom-footer-info a{
+        font-size: 9px;
+    }
+    .faq .accordion .accordion-item .accordion-header button span {
+        width: 90%;
+        line-height: 18px;
+    }
+    .faq .accordion .accordion-item .accordion-header button i{
+        font-size: 9px;
+    }
+    .faq .accordion .accordion-item .accordion-body {
+        font-size: 11px;
+        line-height: 18px;
+        color: rgba(255,255,255,0.8);
+    }
+    .link {
+        margin-top: 20px;
+    }
+    .faq .accordion .accordion-item .accordion-header .collapsed .icon-down-arrow{
+        font-size: 9px;
+    }
+    .tab{
+        display: none;
+    }
+    .w-47{
+        width: 100%;
+    }
+    .tabcontent{
+        padding: 20px;
+    }
+    .tabcontent .logo{
+        max-width: 100px;
+        height: 35px;
+        margin-bottom: 10px;
+    }
+    .tabcontent .name{
+        line-height: 13px;
+        font-size: 10px;
+        margin-bottom: 10px;
+    }
+    .test2{
+        position: relative;
+    }
+    .link3{
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 0;
+        line-height: 14px;
+    }
+    /* 
+        blog
+    */
+    .subscribe-section .subscribe {
+        padding: 65px 0 47px 0;
+    }
+    .subscribe-section .subscribe .title h3{
+        font-size: 16px;
+        line-height: 21px;
+    }
+    .subscribe-section .subscribe .subscribe-input {
+        width: 202px;
+        position: relative;
+        height: 28px;
+    }
+    .subscribe-section .subscribe .subscribe-input input{
+        font-size: 10px;
+        padding-left: 10px;
+    }
+    .subscribe-section .subscribe .subscribe-input button{
+        right: 14px;
+        font-size: 12px;
+    }
+    .subscribe-section .subscribe .title{
+        margin-bottom: 15px;
+    }
+    .subscribe-section .subscribe .text{
+        display: none;
+    }
+}
+@media (max-width: 420px){
+     .projects .project-card a .image .cover {
+        position: absolute;
+        z-index: 2;
+        bottom: -60px;
+        left: -12px;
+        height: initial;
+        transform: rotate(6deg);
+    }
+    .overflow-banner{
+        overflow-x: hidden;
+    }
+    .main-banner {
+        height: 151px;
+        width: 150%;
+        left: -50%;
+    }
 }
