--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1736,6 +1736,10 @@ a {
   top: 0;
 }
 
+.contact-page {
+  margin-top: 70px;
+}
+
 .contact-page .title {
   margin-bottom: 44px;
 }
@@ -1751,6 +1755,8 @@ a {
 }
 
 .contact-page .contact-form form input {
+  font-size: 30px;
+  font-family: "Roboto-Bold";
   display: block;
   width: 100%;
   height: 70px;
@@ -1769,21 +1775,29 @@ a {
 .contact-page .contact-form form input::-webkit-input-placeholder {
   font-size: 20px;
   text-transform: capitalize;
+  font-family: "Roboto-Regular";
+  color: #404040;
 }
 
 .contact-page .contact-form form input:-ms-input-placeholder {
   font-size: 20px;
   text-transform: capitalize;
+  font-family: "Roboto-Regular";
+  color: #404040;
 }
 
 .contact-page .contact-form form input::-ms-input-placeholder {
   font-size: 20px;
   text-transform: capitalize;
+  font-family: "Roboto-Regular";
+  color: #404040;
 }
 
 .contact-page .contact-form form input::placeholder {
   font-size: 20px;
   text-transform: capitalize;
+  font-family: "Roboto-Regular";
+  color: #404040;
 }
 
 .contact-page .contact-form form .button {
