--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1327,6 +1327,7 @@ $transition-fast: .2s cubic-bezier(.77, 0, .175, 1);
 }
 
 .contact-page{
+  margin-top: 70px;
   .title{
     margin-bottom: 44px;
     h2{
@@ -1339,6 +1340,8 @@ $transition-fast: .2s cubic-bezier(.77, 0, .175, 1);
     padding-right: 100px;
     form{
       input{
+        font-size: 30px;
+        font-family: $bold;
         display: block;
         width: 100%;
         height: 70px;
@@ -1353,6 +1356,8 @@ $transition-fast: .2s cubic-bezier(.77, 0, .175, 1);
         &::placeholder{
           font-size: 20px;
           text-transform: capitalize;
+          font-family: $regular;
+          color: #404040;
         }
       }
       .button{
